force-app/main/default/objects/Opportunity_Approval__c/fields/Opinion_Special_Committee__c.field-meta.xml
<CustomField>
    <fullName>Opinion_Special_Committee__c</fullName>
    <label>Opinion Special Committee</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>