force-app/main/default/objects/Opportunity_Approval__c/fields/Opinion_Subject_to_13e_3__c.field-meta.xml
<CustomField>
    <fullName>Opinion_Subject_to_13e_3__c</fullName>
    <label>Opinion Subject to 13e-3</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>