force-app/main/default/objects/Opportunity_Approval__c/fields/Opportunity_Description__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Description__c</fullName>
    <label>Opportunity Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>