force-app/main/default/objects/Opportunity_Approval__c/fields/Opportunity_for_Financing_Tail__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_for_Financing_Tail__c</fullName>
    <label>Opportunity for Financing Tail?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>