force-app/main/default/objects/Opportunity_Approval__c/fields/Opportunity_for_Staple_Financing__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_for_Staple_Financing__c</fullName>
    <label>Opportunity for Staple Financing?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>