force-app/main/default/objects/Opportunity_Approval__c/fields/Other_Fee_Structure__c.field-meta.xml
<CustomField>
    <fullName>Other_Fee_Structure__c</fullName>
    <label>Other Fee Structure</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>