force-app/main/default/objects/Opportunity_Approval__c/fields/Other_Related_Transactions__c.field-meta.xml
<CustomField>
    <fullName>Other_Related_Transactions__c</fullName>
    <label>Other Related Transactions</label>
    <type>TextArea</type>
</CustomField>