force-app/main/default/objects/Opportunity_Approval__c/fields/Other_Shareholders__c.field-meta.xml
<CustomField>
    <fullName>Other_Shareholders__c</fullName>
    <label>Other Shareholders</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>