force-app/main/default/objects/Opportunity_Approval__c/fields/OutsideCouncil__c.field-meta.xml
<CustomField>
    <fullName>OutsideCouncil__c</fullName>
    <description>If known, identify the name(s) of the client’s outside counsel and/or other advisors (if any):</description>
    <label>Outside Council</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>