force-app/main/default/objects/Opportunity_Approval__c/fields/Ownership_and_Capital_Structure__c.field-meta.xml
<CustomField>
    <fullName>Ownership_and_Capital_Structure__c</fullName>
    <inlineHelpText>PLEASE INCLUDE DEBT SUMMARY</inlineHelpText>
    <label>Ownership and Capital Structure</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>