force-app/main/default/objects/Opportunity_Approval__c/fields/PDF_View__c.field-meta.xml
<CustomField>
    <fullName>PDF_View__c</fullName>
    <formula>$Setup.HL_General__c.Cognos_Protocol__c + $Setup.HL_General__c.Cognos_Domain__c +
CASE(Form_Type__c, &apos;NBC&apos;, &quot;/ibmcognos/bi/v1/disp?b_action=cognosViewer&amp;run.outputFormat=PDF&amp;run.prompt=false&amp;ui.object=storeID%28%22i7499382846124884B3C472FD334A907F%22%29&amp;ui.action=run&amp;cv.header=true&amp;cv.toolbar=false&amp;ui_appbar=true&amp;p_p_OpportunityId=&quot;, &apos;FEIS&apos;, &quot;/ibmcognos/bi/v1/disp?b_action=cognosViewer&amp;run.outputFormat=PDF&amp;run.prompt=false&amp;ui.object=storeID%28%22iD6E596CC881741878AFF2CEEBDCEE79A%22%29&amp;ui.action=run&amp;cv.header=false&amp;cv.toolbar=true&amp;ui_appbar=true&amp;p_p_OpportunityId=&quot;,&apos;CNBC&apos;,&quot;/ibmcognos/bi/v1/disp?b_action=cognosViewer&amp;run.outputFormat=PDF&amp;run.prompt=false&amp;ui.object=storeID%28%22i2DA41AC49BB04B8F9596F5C417E1CF40%22%29&amp;ui.action=run&amp;cv.header=false&amp;cv.toolbar=true&amp;ui_appbar=true&amp;p_p_OpportunityId=&quot;,&quot;INVALID FORM&quot;) + Related_Opportunity_Case_Safe__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PDF View</label>
    <type>Text</type>
</CustomField>