force-app/main/default/objects/Opportunity_Approval__c/fields/Percentage_Retainer_Creditable__c.field-meta.xml
<CustomField>
    <fullName>Percentage_Retainer_Creditable__c</fullName>
    <formula>Related_Opportunity__r.Percentage_Retainer_Creditable__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Percentage Retainer Creditable</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>