force-app/main/default/objects/Opportunity_Approval__c/fields/Pitch_Comments__c.field-meta.xml
<CustomField>
    <fullName>Pitch_Comments__c</fullName>
    <formula>Related_Opportunity__r.Pitch_Comments__c</formula>
    <label>Pitch Comments</label>
    <type>Text</type>
</CustomField>