force-app/main/default/objects/Opportunity_Approval__c/fields/Pitch_Date__c.field-meta.xml
<CustomField>
    <fullName>Pitch_Date__c</fullName>
    <formula>Related_Opportunity__r.Pitch_Date__c</formula>
    <label>Pitch Date</label>
    <type>Date</type>
</CustomField>