force-app/main/default/objects/Opportunity_Approval__c/fields/Pitch_Team__c.field-meta.xml
<CustomField>
    <fullName>Pitch_Team__c</fullName>
    <label>Pitch Team</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>