force-app/main/default/objects/Opportunity_Approval__c/fields/Post_Pitch_Mgmt_Follow_Up__c.field-meta.xml
<CustomField>
    <fullName>Post_Pitch_Mgmt_Follow_Up__c</fullName>
    <inlineHelpText>Which senior pitch member(s) will be responsible for follow-up with the management?</inlineHelpText>
    <label>Management Follow-Up</label>
    <length>255</length>
    <type>Text</type>
</CustomField>