force-app/main/default/objects/Opportunity_Approval__c/fields/Previous_Transactions__c.field-meta.xml
<CustomField>
    <fullName>Previous_Transactions__c</fullName>
    <label>Related Transactions</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>