force-app/main/default/objects/Opportunity_Approval__c/fields/Primary_Industry_Group__c.field-meta.xml
<CustomField>
    <fullName>Primary_Industry_Group__c</fullName>
    <formula>TEXT(Related_Opportunity__r.Industry_Group__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Industry Group</label>
    <type>Text</type>
</CustomField>