force-app/main/default/objects/Opportunity_Approval__c/fields/Primary_Sub_Vertical__c.field-meta.xml
<CustomField>
    <fullName>Primary_Sub_Vertical__c</fullName>
    <formula>TEXT(Related_Opportunity__r.Sector__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Sub-Vertical</label>
    <type>Text</type>
</CustomField>