force-app/main/default/objects/Opportunity_Approval__c/fields/Product_s__c.field-meta.xml
<CustomField>
    <fullName>Product_s__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Product(s)</label>
    <type>Checkbox</type>
</CustomField>