force-app/main/default/objects/Opportunity_Approval__c/fields/Product_Team__c.field-meta.xml
<CustomField>
    <fullName>Product_Team__c</fullName>
    <label>Product Team</label>
    <type>TextArea</type>
</CustomField>