force-app/main/default/objects/Opportunity_Approval__c/fields/Products_Form__c.field-meta.xml
<CustomField>
    <fullName>Products_Form__c</fullName>
    <formula>IF(Product_s__c,&quot;TRUE&quot;,&quot;FALSE&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Products Form</label>
    <type>Text</type>
</CustomField>