force-app/main/default/objects/Opportunity_Approval__c/fields/Progress_Fee__c.field-meta.xml
<CustomField>
    <fullName>Progress_Fee__c</fullName>
    <label>Progress Fee (MM)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>