force-app/main/default/objects/Opportunity_Approval__c/fields/Progress_Fee_c__c.field-meta.xml
<CustomField>
    <fullName>Progress_Fee_c__c</fullName>
    <formula>Related_Opportunity__r.ProgressMonthly_Fee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Progress Fee</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>