force-app/main/default/objects/Opportunity_Approval__c/fields/Progress_Fee_percentage_amount__c.field-meta.xml
<CustomField>
    <fullName>Progress_Fee_percentage_amount__c</fullName>
    <formula>Progress_Fee__c  - (Is_Progress_Fee_Creditable__c  *  Progress_Fee__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Progress Fee percentage amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>