force-app/main/default/objects/Opportunity_Approval__c/fields/Proposed_Fee_Range__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Fee_Range__c</fullName>
    <label>Proposed Fee Range</label>
    <length>255</length>
    <type>Text</type>
</CustomField>