force-app/main/default/objects/Opportunity_Approval__c/fields/Proposed_Houlihan_Lokey_Team__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Houlihan_Lokey_Team__c</fullName>
    <label>Proposed Houlihan Lokey Team</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>