force-app/main/default/objects/Opportunity_Approval__c/fields/Proposed_Incremental_Fees__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Incremental_Fees__c</fullName>
    <label>Proposed Incremental Fees</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>