force-app/main/default/objects/Opportunity_Approval__c/fields/Re_Submission_Additional_Risk_Factors__c.field-meta.xml
<CustomField>
    <fullName>Re_Submission_Additional_Risk_Factors__c</fullName>
    <label>Re-Submission - Additional Risk Factors</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>