force-app/main/default/objects/Opportunity_Approval__c/fields/Re_Submission_Situation_Update__c.field-meta.xml
<CustomField>
    <fullName>Re_Submission_Situation_Update__c</fullName>
    <label>Re-Submission - Situation Update</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>