force-app/main/default/objects/Opportunity_Approval__c/fields/Re_Submission_Valuation_Expectations__c.field-meta.xml
<CustomField>
    <fullName>Re_Submission_Valuation_Expectations__c</fullName>
    <label>Re-Submission - Valuation Expectations</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>