force-app/main/default/objects/Opportunity_Approval__c/fields/Real_Estate_Angle__c.field-meta.xml
<CustomField>
    <fullName>Real_Estate_Angle__c</fullName>
    <inlineHelpText>Does the company have material owned real estate assets?</inlineHelpText>
    <label>Real Estate Angle</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>