force-app/main/default/objects/Opportunity_Approval__c/fields/Real_Estate_Angle_Notes__c.field-meta.xml
<CustomField>
    <fullName>Real_Estate_Angle_Notes__c</fullName>
    <label>Real Estate Angle Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>