force-app/main/default/objects/Opportunity_Approval__c/fields/Reason_WonLost__c.field-meta.xml
<CustomField>
    <fullName>Reason_WonLost__c</fullName>
    <label>Reason Won/Lost</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>