force-app/main/default/objects/Opportunity_Approval__c/fields/Referral_Fee__c.field-meta.xml
<CustomField>
    <fullName>Referral_Fee__c</fullName>
    <description>Created as part of NBC lightning page.</description>
    <label>Referral Fee Owed (MM)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>