force-app/main/default/objects/Opportunity_Approval__c/fields/Referral_Fee_Owed__c.field-meta.xml
<CustomField>
    <fullName>Referral_Fee_Owed__c</fullName>
    <inlineHelpText>Any referral fee arrangement must be reviewed and pre-approved by the Legal Department and Scott Adelson or Bob Hotz</inlineHelpText>
    <label>Referral Fee Owed</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>