force-app/main/default/objects/Opportunity_Approval__c/fields/Referral_Source__c.field-meta.xml
<CustomField>
    <fullName>Referral_Source__c</fullName>
    <formula>IF(ISBLANK(Related_Opportunity__r.Referral_Contact__c), &quot;&quot;, Related_Opportunity__r.Referral_Contact__r.FirstName+&quot; &quot;+Related_Opportunity__r.Referral_Contact__r.LastName+&quot;, &quot;+ Related_Opportunity__r.Referral_Contact__r.Account.Name)</formula>
    <label>Referral Source</label>
    <type>Text</type>
</CustomField>