force-app/main/default/objects/Opportunity_Approval__c/fields/Referral_Type__c.field-meta.xml
<CustomField>
    <fullName>Referral_Type__c</fullName>
    <formula>TEXT(Related_Opportunity__r.Referral_Type__c)</formula>
    <label>Referral Type</label>
    <type>Text</type>
</CustomField>