force-app/main/default/objects/Opportunity_Approval__c/fields/Related_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Related_Opportunity__c</fullName>
    <inlineHelpText>Please indicate the related Opportunity record.</inlineHelpText>
    <label>Related Opportunity</label>
    <referenceTo>Opportunity__c</referenceTo>
    <relationshipLabel>Opportunity Reviews</relationshipLabel>
    <relationshipName>Opportunity_Approvals</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>