force-app/main/default/objects/Opportunity_Approval__c/fields/Related_Opportunity_Case_Safe__c.field-meta.xml
<CustomField>
    <fullName>Related_Opportunity_Case_Safe__c</fullName>
    <formula>CASESAFEID( Related_Opportunity__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related Opportunity Case Safe</label>
    <type>Text</type>
</CustomField>