force-app/main/default/objects/Opportunity_Approval__c/fields/Related_Party_Affiliation_Notes__c.field-meta.xml
<CustomField>
    <fullName>Related_Party_Affiliation_Notes__c</fullName>
    <label>Related Party Affiliation Notes</label>
    <type>TextArea</type>
</CustomField>