force-app/main/default/objects/Opportunity_Approval__c/fields/Related_Party_Transaction__c.field-meta.xml
<CustomField>
    <fullName>Related_Party_Transaction__c</fullName>
    <label>Related Party Transaction</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>