force-app/main/default/objects/Opportunity_Approval__c/fields/Req_feedback_prior_to_normal_sched_call__c.field-meta.xml
<CustomField>
    <fullName>Req_feedback_prior_to_normal_sched_call__c</fullName>
    <defaultValue>false</defaultValue>
    <label>When is feedback needed by?</label>
    <type>Checkbox</type>
</CustomField>