force-app/main/default/objects/Opportunity_Approval__c/fields/Requires_feedback_prior_to_normal_sched__c.field-meta.xml
<CustomField>
    <fullName>Requires_feedback_prior_to_normal_sched__c</fullName>
    <description>Used for Cognos reporting</description>
    <formula>IF(Req_feedback_prior_to_normal_sched_call__c,&quot;TRUE&quot;, &quot;FALSE&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Requires feedback prior to normal sched</label>
    <type>Text</type>
</CustomField>