force-app/main/default/objects/Opportunity_Approval__c/fields/Restricted_List__c.field-meta.xml
<CustomField>
    <fullName>Restricted_List__c</fullName>
    <label>Restricted List</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>