force-app/main/default/objects/Opportunity_Approval__c/fields/Restricted_List_Date__c.field-meta.xml
<CustomField>
    <fullName>Restricted_List_Date__c</fullName>
    <label>Restricted List Date</label>
    <type>Date</type>
</CustomField>