force-app/main/default/objects/Opportunity_Approval__c/fields/Restricted_List_Explanation__c.field-meta.xml
<CustomField>
    <fullName>Restricted_List_Explanation__c</fullName>
    <description>originally used for restricted list, repurposed to be for Conflicts Check explanation. API name needs to be corrected.</description>
    <label>Conflicts Explanation</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>