force-app/main/default/objects/Opportunity_Approval__c/fields/Retainer1__c.field-meta.xml
<CustomField>
    <fullName>Retainer1__c</fullName>
    <label>Retainer</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>