force-app/main/default/objects/Opportunity_Approval__c/fields/Retainer__c.field-meta.xml
<CustomField>
    <fullName>Retainer__c</fullName>
    <formula>Related_Opportunity__r.Retainer__c</formula>
    <label>Retainer</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>