force-app/main/default/objects/Opportunity_Approval__c/fields/Retainer_Creditable__c.field-meta.xml
<CustomField>
    <fullName>Retainer_Creditable__c</fullName>
    <inlineHelpText>Enter %  that is Creditable</inlineHelpText>
    <label>Retainer Fee Creditable ?</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>