force-app/main/default/objects/Opportunity_Approval__c/fields/Retainer_MM__c.field-meta.xml
<CustomField>
    <fullName>Retainer_MM__c</fullName>
    <formula>Retainer1__c /1000000</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Retainer (MM)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>