force-app/main/default/objects/Opportunity_Approval__c/fields/Retainer_percentage_amount__c.field-meta.xml
<CustomField>
    <fullName>Retainer_percentage_amount__c</fullName>
    <formula>Retainer_MM__c - (Retainer_MM__c * Retainer_Creditable__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Retainer percentage amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>