force-app/main/default/objects/Opportunity_Approval__c/fields/Reviewed_Formula__c.field-meta.xml
<CustomField>
    <fullName>Reviewed_Formula__c</fullName>
    <formula>IF( Reviewed__c,&quot;TRUE&quot;,&quot;FALSE&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reviewed Formula</label>
    <type>Text</type>
</CustomField>