force-app/main/default/objects/Opportunity_Approval__c/fields/Risk_Factor__c.field-meta.xml
<CustomField>
    <fullName>Risk_Factor__c</fullName>
    <label>Risk Factors</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Counterparty Risk</fullName>
            </value>
            <value>
                <fullName>Client Risk</fullName>
            </value>
            <value>
                <fullName>Market Risk</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Product risk</fullName>
            </value>
            <value>
                <fullName>Timing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>