force-app/main/default/objects/Opportunity_Approval__c/fields/Risk_Factors__c.field-meta.xml
<CustomField>
    <fullName>Risk_Factors__c</fullName>
    <inlineHelpText>Transaction and fee structure</inlineHelpText>
    <label>Risk Factors</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>