force-app/main/default/objects/Opportunity_Approval__c/fields/Risk_Levels__c.field-meta.xml
<CustomField>
    <fullName>Risk_Levels__c</fullName>
    <label>Risk Levels</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Risk_Factor__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>