force-app/main/default/objects/Opportunity_Approval__c/fields/SC_Assistance_Benefit__c.field-meta.xml
<CustomField>
    <fullName>SC_Assistance_Benefit__c</fullName>
    <label>SC Assistance Benefit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>