force-app/main/default/objects/Opportunity_Approval__c/fields/SC_Contact_Form__c.field-meta.xml
<CustomField>
    <fullName>SC_Contact_Form__c</fullName>
    <formula>SC_Contact__r.FirstName + &quot; &quot; + SC_Contact__r.LastName</formula>
    <label>SC Contact Form</label>
    <type>Text</type>
</CustomField>