force-app/main/default/objects/Opportunity_Approval__c/fields/Scheduled_call_date_time__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_call_date_time__c</fullName>
    <label>Scheduled call date &amp; time</label>
    <type>DateTime</type>
</CustomField>