force-app/main/default/objects/Opportunity_Approval__c/fields/Scheduled_call_date_time_GMT__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_call_date_time_GMT__c</fullName>
    <formula>if(!isblank(Scheduled_call_date_time__c),(text(Month( DATEVALUE(Scheduled_call_date_time__c) ))&amp; &quot;/&quot; &amp; text(Day( DATEVALUE(Scheduled_call_date_time__c) ))&amp; &quot;/&quot; &amp; text(Year( DATEVALUE(Scheduled_call_date_time__c) )) &amp; &quot; &quot; &amp;
text(IF( OR( VALUE( MID( TEXT( Scheduled_call_date_time__c ), 12, 2 ) ) = 0, VALUE( MID( TEXT( Scheduled_call_date_time__c ), 12, 2 ) ) = 12 ), 12, VALUE( MID( TEXT( Scheduled_call_date_time__c  ), 12, 2 ) ) - IF( VALUE( MID( TEXT( Scheduled_call_date_time__c  ), 12, 2 ) ) &lt; 12, 0, 12 ) )) &amp; &quot;:&quot; &amp;
MID(Text(Scheduled_call_date_time__c),15,2) &amp; &quot; &quot; &amp;
IF( VALUE( MID( TEXT( Scheduled_call_date_time__c ), 12, 2 ) ) &lt; 12, &quot;AM&quot;, &quot;PM&quot; )&amp; &quot;  GMT&quot; ),&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Scheduled call date &amp; time(GMT)</label>
    <type>Text</type>
</CustomField>