force-app/main/default/objects/Opportunity_Approval__c/fields/Second_Ratchet_Total__c.field-meta.xml
<CustomField>
    <fullName>Second_Ratchet_Total__c</fullName>
    <formula>IF(Transaction_Value_for_Fee_Calc__c &gt;= Second_Ratchet_To_Amount__c, (Second_Ratchet_To_Amount__c - Second_Ratchet_From_Amount__c) *  Second_Ratchet_Percent__c,  IF((Transaction_Value_for_Fee_Calc__c &gt; Second_Ratchet_From_Amount__c) &amp;&amp; (Transaction_Value_for_Fee_Calc__c &lt; Second_Ratchet_To_Amount__c), (Transaction_Value_for_Fee_Calc__c -Second_Ratchet_From_Amount__c)*Second_Ratchet_Percent__c, 0) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Second Ratchet Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>