force-app/main/default/objects/Opportunity_Approval__c/fields/Secondary_Job_Type__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Job_Type__c</fullName>
    <label>Secondary Job Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Activist Advisory</fullName>
            </value>
            <value>
                <fullName>Buyside</fullName>
            </value>
            <value>
                <fullName>Buyside &amp; Financing Advisory</fullName>
            </value>
            <value>
                <fullName>Corporate Alliances</fullName>
            </value>
            <value>
                <fullName>Debt Capital Markets</fullName>
            </value>
            <value>
                <fullName>Debtor Advisors</fullName>
            </value>
            <value>
                <fullName>Discretionary Advisory</fullName>
            </value>
            <value>
                <fullName>Equity Capital Markets</fullName>
            </value>
            <value>
                <fullName>ESOP Corporate Finance</fullName>
            </value>
            <value>
                <fullName>General Financial Advisory</fullName>
            </value>
            <value>
                <fullName>Going Private</fullName>
            </value>
            <value>
                <fullName>Illiquid Financial Assets</fullName>
            </value>
            <value>
                <fullName>Liability Management</fullName>
            </value>
            <value>
                <fullName>Merger</fullName>
            </value>
            <value>
                <fullName>Negotiated Fairness</fullName>
            </value>
            <value>
                <fullName>Partners</fullName>
            </value>
            <value>
                <fullName>Post Merger Integration</fullName>
            </value>
            <value>
                <fullName>Private Funds: GP Advisory</fullName>
            </value>
            <value>
                <fullName>Private Funds: GP Stake Sale</fullName>
            </value>
            <value>
                <fullName>Private Funds: Primary Advisory</fullName>
            </value>
            <value>
                <fullName>Private Funds: Secondary Advisory</fullName>
            </value>
            <value>
                <fullName>Real Estate Brokerage</fullName>
            </value>
            <value>
                <fullName>Sellside</fullName>
            </value>
            <value>
                <fullName>Special Committee Advisory</fullName>
            </value>
            <value>
                <fullName>Special Situations Buyside</fullName>
            </value>
            <value>
                <fullName>Special Situations Sellside</fullName>
            </value>
            <value>
                <fullName>Strategic Alternatives Study</fullName>
            </value>
            <value>
                <fullName>Strategy</fullName>
            </value>
            <value>
                <fullName>Syndicated Finance</fullName>
            </value>
            <value>
                <fullName>Take Over Defense</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>