force-app/main/default/objects/Opportunity_Approval__c/fields/Senior_Management__c.field-meta.xml
<CustomField>
    <fullName>Senior_Management__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Senior Management</label>
    <type>Checkbox</type>
</CustomField>