force-app/main/default/objects/Opportunity_Approval__c/fields/Senior_Management_Form__c.field-meta.xml
<CustomField>
    <fullName>Senior_Management_Form__c</fullName>
    <formula>IF( Senior_Management__c,&quot;TRUE&quot;,&quot;FALSE&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Senior Management Form</label>
    <type>Text</type>
</CustomField>