force-app/main/default/objects/Opportunity_Approval__c/fields/Senior_Management_Team__c.field-meta.xml
<CustomField>
    <fullName>Senior_Management_Team__c</fullName>
    <label>Senior Management Team</label>
    <type>TextArea</type>
</CustomField>