force-app/main/default/objects/Opportunity_Approval__c/fields/Shareholder_Vote__c.field-meta.xml
<CustomField>
    <fullName>Shareholder_Vote__c</fullName>
    <label>Shareholder Vote?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Maybe</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>