force-app/main/default/objects/Opportunity_Approval__c/fields/Staple_Financing_is_an_important_driver__c.field-meta.xml
<CustomField>
    <fullName>Staple_Financing_is_an_important_driver__c</fullName>
    <inlineHelpText>Is the staple product important to the client’s decision to retain a financial advisor?</inlineHelpText>
    <label>Staple Financing is an Important Driver?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>