force-app/main/default/objects/Opportunity_Approval__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <inlineHelpText>Retainer Outstanding/Sent, Pitched, Preparing, Pitch, etc.</inlineHelpText>
    <label>Current Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Outstanding/Sent</fullName>
            </value>
            <value>
                <fullName>Pitched</fullName>
            </value>
            <value>
                <fullName>Preparing Pitch</fullName>
            </value>
            <value>
                <fullName>Verbally Engaged</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>