force-app/main/default/objects/Opportunity_Approval__c/fields/Structure_and_Pricing_Expectations__c.field-meta.xml
<CustomField>
    <fullName>Structure_and_Pricing_Expectations__c</fullName>
    <label>Structure and Pricing Expectations</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>