force-app/main/default/objects/Opportunity_Approval__c/fields/Subject_Company__c.field-meta.xml
<CustomField>
    <fullName>Subject_Company__c</fullName>
    <formula>Related_Opportunity__r.Subject__r.Name</formula>
    <label>Subject Company</label>
    <type>Text</type>
</CustomField>